@@ -143,7 +143,9 @@ t_add_to_collection = Add to collection
 t_remove_from_collection = Remove from collection
 t_need_authentication_to_add_series_to_collection = \
 In order to add this series to your collection you should <a href="{0}">register</a> or <a href="{1}">pass authentication</a>.
+t_image_id = Image ID
 t_add_image = Add image
+t_replace_image = Replace image
 t_add_image_error = This series has enough images. Please, contact with admin if you want to add more images
 t_who_selling_series = Who was selling/buying this series
 t_add_info_who_selling_series = Add info about selling/buying this series
