@@ -142,7 +142,9 @@ t_add_to_collection = Добавить в коллекцию
 t_remove_from_collection = Убрать из коллекции
 t_need_authentication_to_add_series_to_collection = \
 Для того, чтобы добавить эту серию в свою коллекцию вы должны <a href="{0}">зарегистрироваться</a> или <a href="{1}">пройти идентификацию</a>.
+t_image_id = ID изображения
 t_add_image = Добавить изображение
+t_replace_image = Заменить изображение
 t_add_image_error = Эта серия содержит все необходимые изображения. Пожалуйста, свяжитесь с администратором, если вы хотите добавить больше изображений
 t_who_selling_series = Покупки и продажи этой серии
 t_add_info_who_selling_series = Добавить покупки и продажи этой серии
