@@ -36,6 +36,12 @@ VALUES \
      , :preview \
      )
 
+image_data.replace = \
+UPDATE images_data \
+   SET content = :content \
+ WHERE image_id = :image_id \
+   AND preview = :preview
+
 image.add = \
 INSERT \
   INTO images \
@@ -46,6 +52,12 @@ VALUES \
      ( :type \
      , :filename \
      )
+
+image.replace = \
+UPDATE images \
+   SET type = :type \
+     , filename = :filename \
+ WHERE id = :id
 
 image.find_by_id = \
 SELECT id \
