@@ -89,7 +89,7 @@
 								</div>
 							</div>
 							
-							<div class="row" th:if="${allowAddingImages}">
+							<div class="row" th:if="${allowAddingImages or allowReplacingImages}">
 								<div class="col-sm-10">
 									<form id="add-image-form"
 										method="post"
@@ -128,8 +128,40 @@
 											</div>
 										</div>
 										<div class="form-group  from-group-sm">
-											<div class="col-sm-offset-3 col-sm-5">
+											<div class="col-sm-offset-3 col-sm-8">
 												<input type="submit" class="btn btn-primary btn-sm" value="Add image" th:value="#{t_add_image}" />
+											</div>
+										</div>
+										<div class="form-group form-group-sm"
+											th:classappend="${#fields.hasErrors('imageId') ? 'has-error' : ''}"
+											th:if="${allowReplacingImages}">
+											<label for="image-url" class="control-label col-sm-3" th:text="#{t_image_id}">
+												Image ID
+											</label>
+											<div class="col-sm-4">
+												<select id="image-id" th:field="*{imageId}" class="form-control">
+													<option value="" th:text="#{t_not_chosen}">Not chosen</option>
+													<!--/*/
+													<option th:each="imageId : ${series.imageIds}" th:value="${imageId}" th:text="${imageId}"></option>
+													/*/-->
+													<!--/*-->
+													<option value="1">1</option>
+													<!--*/-->
+												</select>
+												<!--/*/
+												<span id="image-id.errors"
+													class="help-block"
+													th:if="${#fields.hasErrors('imageId')}"
+													th:each="error : ${#fields.errors('imageId')}"
+													th:text="${error}">
+												</span>
+												/*/-->
+											</div>
+										</div>
+										<div class="form-group from-group-sm" th:if="${allowReplacingImages}">
+											<div class="col-sm-offset-3 col-sm-8">
+												<!--/* @todo #1303 Replace image form: arrange submit buttons in a one line  */-->
+												<input type="submit" class="btn btn-default btn-sm" name="replaceImage" value="Replace image" th:value="#{t_replace_image}" />
 											</div>
 										</div>
 									</form>
