@@ -1,5 +1,6 @@
 0.x (upcoming release)
 - (feature) a series can be marked as a similar to another one
+- (feature) series images can be replaced
 
 0.4.3
 - (feature)        add support for Ukrainian hryvnia
